# check_english_analyze

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/actions/update-snapshots/: action.yml
.github/workflows/: test.yml  update-snapshots.yml
docs/: festival.md  flite.md  mfa.md  phonemizer.md  コーディング規約.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tools/: conftest.py  extract_feature.py  feature_extractor_utils.py  festival.py  match_phonemes.py  mfa_runner.py  phoneme_matcher.py  process_alignment.py  process_festival.py  process_mfa.py  process_phonemizer.py  process_syllable.py  symbol_loader.py  symbol_mapping.json  test_extract_feature.py  test_festival.py  test_match_phonemes.py  test_phonemizer.py  test_process_alignment.py  test_process_syllable.py  test_syllable.py  textgrid_parser.py
tools/__snapshots__/: test_process_alignment.ambr
tools/__snapshots__/test_extract_feature/: test_extract_aligned_feature_with_real_data.json
tools/data/: README.md
utility/: file_utility.py  json_utility.py  logger_utility.py
