[project]
name = "check-english-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "g2p-en>=2.1.0",
    "phonemizer>=3.3.0",
    "pydantic>=2.11.3",
    "ruff>=0.11.6",
    "sexpdata>=1.0.2",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP"]
ignore = [
    "E501", # line-too-long
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
